--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "example-typescript-package",
-  "version": "0.2.2",
-  "description": "",
+  "name": "jwt-handler",
+  "version": "0.0.1",
+  "description": "Creation and validation of JWT",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "umd:main": "dist/umd/index.js",
@@ -40,15 +40,12 @@
     "esm",
     "umd"
   ],
-  "author": "Tom Chen <tomchen.org@gmail.com>",
+  "author": "Theo Hollenberg <theo.hollenberg@bettyblocks.com>",
   "license": "MIT",
-  "homepage": "https://github.com/tomchen/example-typescript-package",
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:tomchen/example-typescript-package.git"
-  },
+  "homepage": "https://github.com/TheoHollenberg/jwt-handler",
+  "repository": "git@github.com:TheoHollenberg/jwt-handler.git",
   "bugs": {
-    "url": "https://github.com/tomchen/example-typescript-package/issues"
+    "url": "https://github.com/TheoHollenberg/jwt-handler/issues"
   },
   "dependencies": {},
   "devDependencies": {
